--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-art-template": "^1.0.1",
     "express-session": "^1.17.2",
+    "formidable": "^1.2.2",
     "jquery": "^3.6.0",
     "mongoose": "^5.12.14"
   }
