--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.2",
     "formidable": "^1.2.2",
     "jquery": "^3.6.0",
-    "mongoose": "^5.12.14"
+    "mongoose": "^5.12.14",
+    "multiparty": "^4.2.2"
   }
 }
